# RAG-application

./: .gitignore  1. LangChain의 ChatUpstage를 활용한 검증.ipynb  2. RAG with Chroma.ipynb  README.md  main.py  pyproject.toml
chroma/ec8342fb-1dd0-4079-be60-abc415c99815/: index_metadata.pickle
src/: llm.py
